--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "build": "npm run build:renderer && npm run build:electron",
     "build:renderer": "vite build",
     "build:electron": "tsc -p tsconfig.main.json",
-    "postinstall": "electron-builder install-app-deps"
+    "postinstall": "electron-builder install-app-deps",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:ui": "vitest --ui"
   },
   "keywords": [
     "electron",
@@ -34,10 +37,15 @@
     "electron-builder": "^25.1.8",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "jsdom": "^24.0.0",
     "typescript": "^5.3.3",
     "vite": "^5.0.8",
     "vite-plugin-electron": "^0.28.1",
-    "wait-on": "^7.2.0"
+    "vitest": "^2.0.5",
+    "wait-on": "^7.2.0",
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2"
   },
   "dependencies": {
     "better-sqlite3": "^12.5.0",
