--- a/tsconfig.main.json
+++ b/tsconfig.main.json
@@ -5,6 +5,7 @@
     "lib": ["ES2020"],
     "outDir": "dist",
     "rootDir": "electron",
+    "typeRoots": ["./electron"],
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
