--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "postinstall": "electron-builder install-app-deps",
     "test": "vitest",
     "test:watch": "vitest --watch",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "test:memory": "vitest src/services/audioService.memory.test.ts"
   },
   "keywords": [
     "electron",
