--- a/package.json
+++ b/package.json
@@ -36,6 +36,9 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "@types/better-sqlite3": "^7.6.12",
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
@@ -53,15 +56,15 @@
     "vite": "^5.0.8",
     "vite-plugin-electron": "^0.28.1",
     "vitest": "^2.0.5",
-    "wait-on": "^7.2.0",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/user-event": "^14.5.2"
+    "wait-on": "^7.2.0"
   },
   "dependencies": {
     "better-sqlite3": "^12.5.0",
+    "i18next": "^25.7.4",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^16.5.3",
     "ws": "^8.16.0"
   }
 }
