--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^16.5.3",
+    "react-window": "^2.2.5",
     "ws": "^8.16.0"
   }
 }
