--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "better-sqlite3": "^12.5.0",
     "i18next": "^25.7.4",
     "i18next-browser-languagedetector": "^8.2.0",
+    "lucide-react": "^0.563.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^16.5.3",
